--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: 'master'
+          ref: 'main'
 
       - name: Setup GCP Service Account
         uses: google-github-actions/setup-gcloud@master
